2006/06/15	tsch

	* Cairo.pm, MANIFEST, NEWS, README: Release 0.04.

2006/06/15	tsch

	* t/CairoSurface.t: Wrap two tests that recently started failing
	in TODO blocks.

2006/06/14	tsch

	* Makefile.PL: Require cairo >= 1.1.8.

	* CairoSurface.xs, t/CairoSurface.t: Wrap and test
	cairo_surface_set_fallback_resolution,
	cairo_image_surface_get_data, cairo_image_surface_get_format, and
	cairo_image_surface_get_stride.  Remove the wrappers and tests for
	cairo_pdf_surface_set_dpi and cairo_ps_surface_set_dpi.

	* t/CairoSurface.t: Test Cairo::ImageSurface::get_width and
	get_height.

2006/06/03	tsch

	* Cairo.pm: Document Cairo::get_group_target, Cairo::new_sub_path,
	Cairo::Pattern::get_type, Cairo::set_scaled_font, Cairo::version,
	and Cairo::version_string.

	* t/Cairo.t, Cairo.xs: Allow Cairo::version[_string] to be called
	as a function and as a class method.

	* CairoPattern.xs, CairoSurface.xs, t/CairoSurface.t, Makefile.PL,
	examples/simple.pl, examples/png/caps_joins.pl,
	examples/png/hering.pl: Whitespace fixes.

	* t/CairoSurface.t, CairoSurface.xs: Wrap
	cairo_surface_get_content.

	* MakeHelper.pm: Don't add a linebreak to croaks so perl prints
	line information.

	* Makefile.PL: Require cairo 1.1.7.

	* examples/png/README, examples/png/bevels.pl,
	examples/png/spline-pipeline.pl, examples/png/text-rotate.pl,
	examples/png/text.pl: New example ports.

2006/05/14	tsch

	* t/CairoSurface.t, CairoSurface.xs: Remove
	Cairo::Surface::finish; it's memory management related and not
	needed, as far as I can tell.  Scream if you used it.

	* t/CairoSurface.t, CairoSurface.xs: Bind and test
	cairo_surface_write_to_png_stream,
	cairo_image_surface_create_from_png_stream,
	cairo_pdf_surface_create_for_stream, and
	cairo_ps_surface_create_for_stream.

	* CairoSurface.xs: Don't leak cairo_surface_create_similar's
	return value.

	* cairo-perl-private.h: Remove CAIRO_PERL_UNUSED.

	* cairo-perl-private.h, Cairo.xs, CairoFont.xs, CairoMatrix.xs,